frontend - implementing useModal hook
